--- a/gb/23/10/23/n14101327.md
+++ b/gb/23/10/23/n14101327.md
@@ -1,59 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>张廖宗祠“崇远堂” 重阳祭祖凝聚宗亲团结</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101330-642943-600x400.jpg" />
 <h6>西螺镇代表廖庭辉表示，非常高兴应邀参加九九重阳节。（廖庭辉提供）
 </h6>
 <hr>
-<p>【大纪元2023年10月23日讯】（大纪元记者廖俪芬台湾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%91%E6%9E%97.md#1">云林</a>报导）台湾著名宗祠之一，张廖宗祠“崇远堂”，座落于云林县<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A5%BF%E8%9E%BA.md#1">西螺</a>镇福田里新厝仔。这座宗祠由诏安客家族张廖家族所建，他们渡台开垦了西螺、二崙、崙背等地区，成为了重要的精神与信仰中心。</p>
-<figure id="attachment_14101333" aria-describedby="caption-attachment-14101333" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/10/id14101333-642946-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-14101333" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101333-642946-450x338.jpg" alt="" width="450" b="338" /></a><figcaption id="caption-attachment-14101333" class="wp-caption-text">秋季祭祖仪式，怀念祖先的德泽。（廖庭辉提供）</figcaption></figure>
-<figure id="attachment_14101332" aria-describedby="caption-attachment-14101332" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/10/id14101332-642945-450x321.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-14101332" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101332-642945-450x321.jpg" alt="" width="450" b="321" /></a><figcaption id="caption-attachment-14101332" class="wp-caption-text">在清康熙四十年（1701年），一些族人决定冒着清朝海禁令，来到台湾，并开始在二崙的荒地上垦地。（廖庭辉提供）</figcaption></figure>
-<p>每年农历正月十一日和九九<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%8D%E9%98%B3%E8%8A%82.md#1">重阳节</a>，崇远堂都举办春秋两祭，严格按照古礼进行祭祖仪式。这些仪式旨在怀念祖先，凝聚宗亲的团结。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A5%BF%E8%9E%BA.md#1">西螺</a>镇代表廖庭辉表示，非常高兴应邀参加九九<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%8D%E9%98%B3%E8%8A%82.md#1">重阳节</a>。他说：“这是一个遵循古礼的秋季祭祖仪式，有助于凝聚宗亲的团结，并怀念祖先的德泽。”</p>
+<p>【大纪元2023年10月23日讯】（大纪元记者廖俪芬台湾云林报导）台湾著名宗祠之一，张廖宗祠“崇远堂”，座落于云林县西螺镇福田里新厝仔。这座宗祠由诏安客家族张廖家族所建，他们渡台开垦了西螺、二崙、崙背等地区，成为了重要的精神与信仰中心。</p>
+<figure id="attachment_14101333" aria-describedby="caption-attachment-14101333" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/10/id14101333-642946-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-medium wp-image-14101333" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101333-642946-450x338.jpg" alt="" width="450" b="338" /></a><figcaption id="caption-attachment-14101333" class="wp-caption-text">秋季祭祖仪式，怀念祖先的德泽。（廖庭辉提供）</figcaption></figure>
+<figure id="attachment_14101332" aria-describedby="caption-attachment-14101332" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/10/id14101332-642945-450x321.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-medium wp-image-14101332" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101332-642945-450x321.jpg" alt="" width="450" b="321" /></a><figcaption id="caption-attachment-14101332" class="wp-caption-text">在清康熙四十年（1701年），一些族人决定冒着清朝海禁令，来到台湾，并开始在二崙的荒地上垦地。（廖庭辉提供）</figcaption></figure>
+<p>每年农历正月十一日和九九重阳节，崇远堂都举办春秋两祭，严格按照古礼进行祭祖仪式。这些仪式旨在怀念祖先，凝聚宗亲的团结。</p>
+<p>西螺镇代表廖庭辉表示，非常高兴应邀参加九九重阳节。他说：“这是一个遵循古礼的秋季祭祖仪式，有助于凝聚宗亲的团结，并怀念祖先的德泽。”</p>
 <p>崇远堂位于台湾西螺镇福田里，是诏安客家族张廖家族渡台开垦西螺、二崙、崙背等地区之初所建的宗祠。这个宗祠成为了台湾诏安客家族的重要精神与信仰中心。</p>
 <p>张廖家族的祖籍是福建省漳州府诏安县官陂乡。因为官陂地处山区土地贫瘠，发展困难。因此，在清康熙四十年（1701年），一些族人决定冒着清朝海禁令，偷渡来到台湾，并开始在二崙的荒地上垦地。到了乾隆年间（1736年-1795年），满清国势稳定，国泰民安，清朝逐渐放宽海禁令，允许人们自海上移民。此后，张廖家族逐渐开始较小规模的台湾开垦活动。</p>
 <p>大正十五年（1926年），由廖大汉组织的祠堂重建委员会成立，包括廖重光、廖富渊、廖学昆、廖旺生、张崇岳等五人。当年秋天，他们重新启动了宗祠的建设工程，并于昭和三年（1928年）完工。整个工程的总费用为日币十万，经济庞大（约相当于购买三十公顷的良田价值）。这项费用是由族人共同捐助，并且他们将宗祠的堂号从“继述堂”改为“崇远堂”，以凝聚宗亲的团结，并怀念祖先的德泽。</p>
-<figure id="attachment_14101331" aria-describedby="caption-attachment-14101331" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/10/id14101331-642944-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-14101331" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101331-642944-450x338.jpg" alt="" width="450" b="338" /></a><figcaption id="caption-attachment-14101331" class="wp-caption-text">是诏安客家族张廖家族渡台开垦西螺、二崙、崙背等地区之初所建的宗祠。（廖庭辉提供）</figcaption></figure>
-<figure id="attachment_14101328" aria-describedby="caption-attachment-14101328" style="width: 417px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/10/id14101328-642941-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-14101328" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101328-642941-450x600.jpg" alt="" width="417" b="556" /></a><figcaption id="caption-attachment-14101328" class="wp-caption-text">张廖宗祠“崇远堂”，重阳祭祖凝聚宗亲团结的信仰中心。（廖庭辉提供）</figcaption></figure>
-<figure id="attachment_14101329" aria-describedby="caption-attachment-14101329" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/10/id14101329-642942-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-14101329" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101329-642942-450x338.jpg" alt="" width="450" b="338" /></a><figcaption id="caption-attachment-14101329" class="wp-caption-text">张廖宗祠“崇远堂”，座落于西螺镇福田里新厝仔。（廖庭辉提供）</figcaption></figure>
+<figure id="attachment_14101331" aria-describedby="caption-attachment-14101331" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/10/id14101331-642944-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-medium wp-image-14101331" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101331-642944-450x338.jpg" alt="" width="450" b="338" /></a><figcaption id="caption-attachment-14101331" class="wp-caption-text">是诏安客家族张廖家族渡台开垦西螺、二崙、崙背等地区之初所建的宗祠。（廖庭辉提供）</figcaption></figure>
+<figure id="attachment_14101328" aria-describedby="caption-attachment-14101328" style="width: 417px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/10/id14101328-642941-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class=" wp-image-14101328" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101328-642941-450x600.jpg" alt="" width="417" b="556" /></a><figcaption id="caption-attachment-14101328" class="wp-caption-text">张廖宗祠“崇远堂”，重阳祭祖凝聚宗亲团结的信仰中心。（廖庭辉提供）</figcaption></figure>
+<figure id="attachment_14101329" aria-describedby="caption-attachment-14101329" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/10/id14101329-642942-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-medium wp-image-14101329" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101329-642942-450x338.jpg" alt="" width="450" b="338" /></a><figcaption id="caption-attachment-14101329" class="wp-caption-text">张廖宗祠“崇远堂”，座落于西螺镇福田里新厝仔。（廖庭辉提供）</figcaption></figure>
 <p>责任编辑：郑桦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096041.md#1">扎堆成仙？九月初九重阳节原来不是老人节！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099371.md#1">桃园医院日间照顾中心携手社区舞蹈班 庆重阳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099565.md#1">后龙田心宝学堂庆重阳 廉政有奖征答</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100622.md#1">五律：重阳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101325.md#1">屏东斜坡上的艺术节 11/4林后四林盛大登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101369.md#1">屏东客家文化巡礼邮轮巴士  九九重阳享优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101301.md#1">1314瑞峰太和朝茶音乐会 迎接曙光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101308.md#1">大业实中科学周 课程丰富包罗万象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101090.md#1">嘉大师资生 以数位教学丰富偏乡学童学习</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100555.md#1">玩创高手青少年成长团体  体验学习与操作</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/16/n14096041.md#1">扎堆成仙？九月初九重阳节原来不是老人节！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/20/n14099371.md#1">桃园医院日间照顾中心携手社区舞蹈班 庆重阳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/20/n14099565.md#1">后龙田心宝学堂庆重阳 廉政有奖征答</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/22/n14100622.md#1">五律：重阳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309650.md#1">嘉大师生USR 获选2024台北金雕微电影银奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309123.md#1">排湾族收获祭！三地门部落文化大联欢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309087.md#1">嘉市113年祖父母节庆祝会 31组祖孙家庭同乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309061.md#1">嘉义市21家特定宠物业 荣获113年度优良业者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308969.md#1">从责任到传承　北港南管的复振之路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308963.md#1">四大舞台百组表演 屏东高校祭万人齐聚屏东公园</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/29/n9783517.md#1" target="_blank">林辉：刚正不阿包青天  中共歪批其虚伪</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/16/n3684317.md#1" target="_blank">我的人生，注定是一场修炼</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/12/n14093639.md#1">三国徐庶修炼成仙的记载</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096597.md#1">【未解之谜】预言中的以巴战争</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14096835.md#1">皇帝小故事：旅舍女老板腹中胎儿预言天子到！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099163.md#1">【未解之谜】以色列的第三圣殿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/18/n14097506.md#1">【古道人生】会算命的道士原来是只大蝎子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14100839.md#1">【人物真相】卷入许家印赌盘的“世界铜王”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100431.md#1">【菁英论坛】传许家印供出9名正国级官员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100568.md#1">【中国禁闻】支原体肺炎爆发 多地出现全家感染</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100127.md#1">“一带一路”峰会后中国股市大跌 业界人士析因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099835.md#1">美国企业为何迫不及待地想要撤出中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099612.md#1">私募大佬“崩溃投降”专家析中国经济困境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099467.md#1">2023第58届金钟奖节目类完整得奖名单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099847.md#1">传赵丽颖退出、杨幂接演陈可辛新片 引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100135.md#1">组图：第58届电视金钟奖“戏剧类”星光红毯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099745.md#1">陈汉典终于“转大人” 熬18年首摘金钟奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099649.md#1">金钟58“节目类”星光大道 众星搞笑登红毯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065758.md#1">常被忽视的隐藏版疾病：微笑忧郁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14085952.md#1">甜艾草成分强力抗病毒 曾获诺奖 竟是抗疫大功臣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091082.md#1">50岁后的养生哲学 6类食物一定要多吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/11/n14092575.md#1">如何预防改善失智症？中医1药茶、3穴位让大脑回春</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100071.md#1">聊聊美国鬼屋：谋杀屋上市 有谁敢买？！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304840.md#1">夏海珍——苦海泅渡的修炼故事（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180530.md#1">【古韵流芳】和序文双璧同辉的滕王阁诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306694.md#1">【人妻日常】突破难熬的磨合期</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/23/n14101327.htm">张廖宗祠“崇远堂” 重阳祭祖凝聚宗亲团结</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101327.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/23/n14101327.htm">张廖宗祠“崇远堂” 重阳祭祖凝聚宗亲团结</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/10/23/n14101327.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
